--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -8,7 +8,7 @@
 			<%- include('../partials/headerNavbar') %>
 			<!-- /header -->
 			<div class="container tittle-wrapper">
-				<h2 class="form-title">Búsqueda de Leyes</h2>
+				<h2>Búsqueda de Leyes</h2>
 			</div>
 			<div class="container form-wrapper">
 				<div class="row">
