--- a/views/leyes/leyesDetail.ejs
+++ b/views/leyes/leyesDetail.ejs
@@ -9,8 +9,8 @@
 			<!-- /header -->
 			<div class="container-fluid detail-group">
 				<div class="row justify-content-center">
-					<div class="col-8 col-sm-6 col-lg-4">
-						<h2 class="form-title"><%= leyDetail.entityTypes.name %> - <%= leyDetail.number %> - <%= leyDetail.year %></h2>
+					<div class="col-8 col-sm-6 col-lg-4 tittle-wrapper">
+						<h2><%= leyDetail.entityTypes.name %> - <%= leyDetail.number %> - <%= leyDetail.year %></h2>
 					</div>
 				</div>
 				<div class="row justify-content-center">
@@ -34,10 +34,11 @@
 								<% }) %>
 							<% } %>
 						</p>
-
-					</div>
+					</div>	
+				</div>
+				<div class="button-group justify-content-center">
 					<form action="/leyes/edit/<%= leyDetail.id %>" method="GET">
-						<div class="form-group">
+						
 							<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button> 
 							<% if (locals.isLogged) { %>
 								<% if (locals.loggedUser.admin == 1) { %>
@@ -51,9 +52,8 @@
 									</a>
 								<% } %>
 							<% } %>  
-						</div>
+						
 					</form>
-					
 					<form action="/leyes/delete/<%= leyDetail.id%>" method="POST">
 						<% if (locals.isLogged) { %>
 							<% if (locals.loggedUser.admin == 1) { %>
