--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,13 +78,12 @@ a.dropdown-item:hover {
   margin-top: 10px;
   padding-top: 1rem;
   padding-bottom: 0.5rem;
-  width: 30rem;
+  font-size: 1.4rem;
 }
 
 .form-wrapper {
-  padding: 1rem 4rem;
+  padding: 1rem 2rem;
   padding-top: 2rem;
-  width: 30rem;
   background-color: lightgray;
   opacity: 0.95;
   border: 2px solid lightgray;
@@ -127,13 +126,9 @@ a.dropdown-item:hover {
   border-radius: 5px;
 }
 
-.detail-group {
+.detail-group, .search-group {
   margin-top: 10px;
   padding: 1rem 4rem;
-}
-
-.detail-group h2 {
-  font-size: 1.4rem;
 }
 
 .button-group {
