--- a/views/leyes/leyesAttachmentForm.ejs
+++ b/views/leyes/leyesAttachmentForm.ejs
@@ -7,34 +7,33 @@
         <!-- header -->
         <%- include('../partials/headerNavbar') %>
         <!-- /header -->
-        <div class="container detail-group">
-            <div class="row justify-content-center">
-                <div class="col-8 col-sm-6 col-lg-4">
-                    <h2 class="form-title">Formulario de Anexos de Leyes</h2>
+        <div class="row">
+            <div class="container detail-group col-lg-6 col-md-8">
+                <h2 class="tittle-wrapper">Formulario de Anexos de Leyes</h2>
+                <div class="container form-wrapper">
+                    <div class="row">
+                        <div class="col-12 light-background">
+                            <p>Tipo: <%= attachLey.entityTypes.name %></p>
+                            <p>Número: <%= attachLey.number %></p>
+                            <p>Año: <%= attachLey.year %></p>
+                            <p>Estado: <%= attachLey.status %></p>
+                            <form action="/leyes/attachments/<%= attachLey.id %>" method="POST" enctype="multipart/form-data">
+                                <div class="row leyes-detail">
+                                    <div class="form-group col-12">
+                                        <label for="attachment" class="form-label">Adjuntar Anexo</label>
+                                        <input type="file" class="form-control" name="attachment">
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
+                                        <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Cancelar</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-8 col-sm-6 col-lg-4 light-background">
-                    <p>Tipo: <%= attachLey.entityTypes.name %></p>
-                    <p>Número: <%= attachLey.number %></p>
-                    <p>Año: <%= attachLey.year %></p>
-                    <p>Estado: <%= attachLey.status %></p>
-                    <form action="/leyes/attachments/<%= attachLey.id %>" method="POST" enctype="multipart/form-data">
-                        <div class="row leyes-detail">
-
-                            <div class="form-group col-12">
-                                <label for="attachment" class="form-label">Adjuntar Anexo</label>
-                                <input type="file" class="form-control" name="attachment">
-                            </div>
-                            <div class="form-group col-12">
-                                <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                                <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Cancelar</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>    
-            </div>
-        </div>
+        </div>        
     </div>
 
     <!-- footer -->
