--- a/views/leyes/leyesDetail.ejs
+++ b/views/leyes/leyesDetail.ejs
@@ -7,60 +7,60 @@
 			<!-- header -->
 			<%- include('../partials/headerNavbar') %>
 			<!-- /header -->
-			<div class="container-fluid detail-group">
-				<div class="row justify-content-center">
-					<div class="col-8 col-sm-6 col-lg-4 tittle-wrapper">
-						<h2><%= leyDetail.entityTypes.name %> - <%= leyDetail.number %> - <%= leyDetail.year %></h2>
+			<div class="row">
+				<div class="container-fluid detail-group col-lg-6 col-md-8">		
+					<h2 class="tittle-wrapper"><%= leyDetail.entityTypes.name %> - <%= leyDetail.number %> - <%= leyDetail.year %></h2>
+					<div class="container form-wrapper">
+						<div class="row">
+							<div class="col-12 light-background">
+								<p>Tipo: <%= leyDetail.entityTypes.name %></p>
+								<p>Número: <%= leyDetail.number %></p>
+								<p>Año: <%= leyDetail.year %></p>
+								<p>Estado: <%= leyDetail.status %></p>
+								<% if (Array.isArray(leyDetail.file)) { %>
+									<% leyDetail.file.forEach(file => { %>
+										<li class="adjuntos"><a href="../../files/leyes/<%= file %>" class="black-link"><%= file %></a></li>
+									<% }) %>
+								<% } else { %>
+									<p>Texto Consolidado: <li class="adjuntos"><a href="../../files/leyes/<%= leyDetail.file %>" class="black-link"><%= leyDetail.file %></a></li></p>								
+								<% } %>
+								<br>
+								<p>Anexos:
+									<% if (leyDetail.anexos) { %>
+										<% leyDetail.anexos.forEach(element => { %>
+											<li class="adjuntos"><a href="../../files/leyes/<%= element.file %>" class="black-link"><%= element.file %></a></li>
+										<% }) %>
+									<% } %>
+								</p>
+							</div>
+						</div>	
 					</div>
-				</div>
-				<div class="row justify-content-center">
-					<div class="col-8 col-sm-6 col-lg-4 light-background">
-						<p>Tipo: <%= leyDetail.entityTypes.name %></p>
-						<p>Número: <%= leyDetail.number %></p>
-						<p>Año: <%= leyDetail.year %></p>
-						<p>Estado: <%= leyDetail.status %></p>
-						<% if (Array.isArray(leyDetail.file)) { %>
-							<% leyDetail.file.forEach(file => { %>
-								<li class="adjuntos"><a href="../../files/leyes/<%= file %>" class="black-link"><%= file %></a></li>
-							<% }) %>
-						<% } else { %>
-							<p>Texto Consolidado: <li class="adjuntos"><a href="../../files/leyes/<%= leyDetail.file %>" class="black-link"><%= leyDetail.file %></a></li></p>								
-						<% } %>
-						<br>
-						<p>Anexos:
-							<% if (leyDetail.anexos) { %>
-								<% leyDetail.anexos.forEach(element => { %>
-									<li class="adjuntos"><a href="../../files/leyes/<%= element.file %>" class="black-link"><%= element.file %></a></li>
-								<% }) %>
-							<% } %>
-						</p>
-					</div>	
-				</div>
-				<div class="button-group justify-content-center">
-					<form action="/leyes/edit/<%= leyDetail.id %>" method="GET">
-						
-							<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button> 
+					<div class="button-group">
+						<form action="/leyes/edit/<%= leyDetail.id %>" method="GET">
+							
+								<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button> 
+								<% if (locals.isLogged) { %>
+									<% if (locals.loggedUser.admin == 1) { %>
+										<button type="submit" class="btn btn-info btn-sm edit-button">Editar</button>
+									<% } %>
+								<% } %>
+								<% if (locals.isLogged) { %>
+									<% if (locals.loggedUser.admin == 1) { %>
+										<a href="/leyes/attachments/<%= leyDetail.id %>" class="btn btn-info btn-sm edit-button">
+											Cargar Anexo
+										</a>
+									<% } %>
+								<% } %>  
+							
+						</form>
+						<form action="/leyes/delete/<%= leyDetail.id%>" method="POST">
 							<% if (locals.isLogged) { %>
 								<% if (locals.loggedUser.admin == 1) { %>
-									<button type="submit" class="btn btn-info btn-sm edit-button">Editar</button>
+									<button type="submit" class="btn btn-info btn-sm edit-button">Eliminar</button>
 								<% } %>
-							<% } %>
-							<% if (locals.isLogged) { %>
-								<% if (locals.loggedUser.admin == 1) { %>
-									<a href="/leyes/attachments/<%= leyDetail.id %>" class="btn btn-info btn-sm edit-button">
-										Cargar Anexo
-									</a>
-								<% } %>
-							<% } %>  
-						
-					</form>
-					<form action="/leyes/delete/<%= leyDetail.id%>" method="POST">
-						<% if (locals.isLogged) { %>
-							<% if (locals.loggedUser.admin == 1) { %>
-								<button type="submit" class="btn btn-info btn-sm edit-button">Eliminar</button>
-							<% } %>
-						<% } %> 
-					</form>
+							<% } %> 
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
