--- a/views/leyes/searchResult.ejs
+++ b/views/leyes/searchResult.ejs
@@ -8,34 +8,34 @@
 			<%- include('../partials/headerNavbar') %>
 			<!-- /header -->
 			<div class="container result-list">
-				<h3>Resultados</h3>			
+				<h2 class="tittle-wrapper">Resultados</h2>			
 				<% if (data) { %>
-					<div class="table-wrapper">
-						<table class="table">
-							<thead>
+				<div class="table-wrapper">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">Tipo</th>
+								<th scope="col">Número</th>
+								<th scope="col">Año</th>
+								<th scope="col">Detalle</th>
+							</tr>
+						</thead>
+						<% data.forEach(element => { %>
+							<tbody>
 								<tr>
-									<th scope="col">Tipo</th>
-									<th scope="col">Número</th>
-									<th scope="col">Año</th>
-									<th scope="col">Detalle</th>
+									<td><%= element.entityTypes.name %></td>
+									<td><%= element.number %></td>
+									<td><%= element.year %></td>
+									<td>
+										<a href="/leyes/detail/<%= element.id %>" class="black-link">
+										Ver Detalle
+										</a>
+									</td>
 								</tr>
-							</thead>
-							<% data.forEach(element => { %>
-								<tbody>
-									<tr>
-										<td><%= element.entityTypes.name %></td>
-										<td><%= element.number %></td>
-										<td><%= element.year %></td>
-										<td>
-											<a href="/leyes/detail/<%= element.id %>" class="black-link">
-											Ver Detalle
-											</a>
-										</td>
-									</tr>
-								</tbody>					
-							<% }) %>
-						</table>
-					</div>
+							</tbody>					
+						<% }) %>
+					</table>
+				</div>
 				<% } %>
 				<br>
 				<button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button>
