--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -7,54 +7,53 @@
     <!-- header -->
     <%- include('../partials/headerNavbar') %>
     <!-- /header -->
-    <div class="container form-wrapper wide-form">
-        <div class="row">
-            <div class="col-12">
-                <h2 class="form-title">Formulario de Carga de Leyes</h2>
-            </div>
-        </div>
-        <div class="col-12">
-            <form action="/leyes/create" method="POST" enctype="multipart/form-data">
-                <div class="row leyes-detail">
-                    <div class="form-group col-12 col-md-6">
-                        <label for="number" class="form-label">Número:</label>
-						<input type="text" id="number" name="number" class="form-control">
-                    </div>
-                    <div class="form-group col-12 col-md-6">
-                        <label for="year" class="form-label">Año:</label>
-						<input type="text" id="year" name="year" class="form-control">
-                    </div>
-                    <div class="form-group col-12 col-md-6">
-                        <label for="type" class="form-label">Tipo de Norma:</label>
-                        <select name="type" id="type" class="form-control">
-                            <option value="">Elegir opción</option>
-                            <% for( let index = 0; index < selectType.length; index++ ) { %>
-                                <option value=<%= selectType[index].id %>><%= selectType[index].name %></option>
-                            <% } %>
-                        </select>                        
-                    </div>
-                    <div class="form-group col-12 col-md-6">
-                        <label for="status" class="form-label">Estado:</label>
-                        <select name="status" id="status" class="form-control">
-                            <option value="">Elegir opción</option>
-                            <option value="vigente">Vigente</option>
-                            <option value="no-vigente">No Vigente</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-12">
-                        <label for="file" class="form-label">Adjuntar Norma</label>
-                        <input type="file" class="form-control" name="file">
-                    </div>
-                    <div class="form-group col-12">
-                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
+        <div class="container search-group col-lg-6 col-md-8">
+            <h2 class="tittle-wrapper">Formulario de Carga de Leyes</h2>
+            <div class="container form-wrapper">
+                <div class="row">
+                    <div class="col-12">
+                        <form action="/leyes/create" method="POST" enctype="multipart/form-data">
+                            <div class="row leyes-detail">
+                                <div class="form-group col-12">
+                                    <label for="number" class="form-label">Número:</label>
+                                    <input type="text" id="number" name="number" class="form-control">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label for="year" class="form-label">Año:</label>
+                                    <input type="text" id="year" name="year" class="form-control">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label for="type" class="form-label">Tipo de Norma:</label>
+                                    <select name="type" id="type" class="form-control">
+                                        <option value="">Elegir opción</option>
+                                        <% for( let index = 0; index < selectType.length; index++ ) { %>
+                                            <option value=<%= selectType[index].id %>><%= selectType[index].name %></option>
+                                        <% } %>
+                                    </select>                        
+                                </div>
+                                <div class="form-group col-12">
+                                    <label for="status" class="form-label">Estado:</label>
+                                    <select name="status" id="status" class="form-control">
+                                        <option value="">Elegir opción</option>
+                                        <option value="vigente">Vigente</option>
+                                        <option value="no-vigente">No Vigente</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-12">
+                                    <label for="file" class="form-label">Adjuntar Norma</label>
+                                    <input type="file" class="form-control" name="file">
+                                </div>
+                                <div class="form-group col-12">
+                                    <button type="submit" class="btn btn-info btn-sm">Guardar</button>
+                                    <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
-    </div>
-
     <!-- footer -->
     <%- include('../partials/footer') %>
     <!-- /footer -->
