--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -7,40 +7,42 @@
         <!-- header -->
         <%- include('partials/headerNavbar') %>
         <!-- /header -->
-        <div class="container form-wrapper wide-form">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="form-title">Ingresar al Sitio</h2>
-                </div>
-            </div>
-            <div class="col-12">
-                <form action="/users/login" method="POST">
-                    <div class="row leyes-detail">
-                        <div class="form-group col-12 col-md-6">
-                            <label for="email" class="form-label">Email:</label>
-                            <input type="text" id="email" name="email" class="form-control">
-                            <% if (locals.errors && errors.email) { %>
-                                <small class="text-danger"><%= errors.email.msg %></small>
-                            <% } %>
-                        </div>
-                        <div class="form-group col-12 col-md-6">
-                            <label for="password" class="form-label">Contraseña:</label>
-                            <input type="password" id="password" name="password" class="form-control">
-                            <% if (locals.errors && errors.password) { %>
-                                <small class="text-danger"><%= errors.password.msg %></small>
-                            <% } %>
-                        </div>
-                        <div class="form-group col-12">
-                            <button type="submit" class="btn btn-info btn-sm">Continuar</button>
-                            <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-                        </div>
-                        <div class="form-group signup_link">
-                            <span>No posee una cuenta?</span> <a href="/users/register" class="black-link">Crear una cuenta</a>
+        <div class="row">
+            <div class="container search-group col-lg-6 col-md-8">
+                <h2 class="tittle-wrapper">Ingresar al Sitio</h2>
+                <div class="container form-wrapper">
+                    <div class="row">
+                        <div class="col-12">
+                            <form action="/users/login" method="POST">
+                                <div class="row leyes-detail">
+                                    <div class="form-group col-12">
+                                        <label for="email" class="form-label">Email:</label>
+                                        <input type="text" id="email" name="email" class="form-control">
+                                        <% if (locals.errors && errors.email) { %>
+                                            <small class="text-danger"><%= errors.email.msg %></small>
+                                        <% } %>
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label for="password" class="form-label">Contraseña:</label>
+                                        <input type="password" id="password" name="password" class="form-control">
+                                        <% if (locals.errors && errors.password) { %>
+                                            <small class="text-danger"><%= errors.password.msg %></small>
+                                        <% } %>
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <button type="submit" class="btn btn-info btn-sm">Continuar</button>
+                                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
+                                    </div>
+                                    <div class="form-group signup_link">
+                                        <span>No posee una cuenta?</span> <a href="/users/register" class="black-link">Crear una cuenta</a>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
-        </div>
+        </div>        
     </div>
     <!-- footer -->
     <%- include('partials/footer') %>
