--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -13,7 +13,7 @@
 					<div class="container form-wrapper">
 						<div class="row">
 							<div class="col-12">
-								<form action="/leyes/search/result" method="GET">
+								<form id="searchForm" action="/leyes/search/result" method="GET">
 									<div class="row">
 										<div class="form-group col-12">
 											<label for="type" class="form-label">Tipo de Norma:</label>
@@ -36,14 +36,14 @@
 											<label for="status" class="form-label">Estado:</label>
 											<input type="text" id="status" name="status" class="form-control">              
 										</div>
-										<div class="form-group col-12">
-											<button type="submit" class="btn btn-info btn-sm">Enviar</button>
-											<button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-										</div>
 									</div>
 								</form>
 							</div>
 						</div>
+					</div>
+					<div class="button-group">
+						<button type="submit" form="searchForm" class="btn btn-info btn-sm">Enviar</button>
+						<button type="reset" form="searchForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
 					</div>
 				</div>
 			</div>
