--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -12,7 +12,7 @@
             <div class="container form-wrapper">
                 <div class="row">
                     <div class="col-12">
-                        <form action="/leyes/create" method="POST" enctype="multipart/form-data">
+                        <form id="createForm" action="/leyes/create" method="POST" enctype="multipart/form-data">
                             <div class="row leyes-detail">
                                 <div class="form-group col-12">
                                     <label for="number" class="form-label">Número:</label>
@@ -43,14 +43,14 @@
                                     <label for="file" class="form-label">Adjuntar Norma</label>
                                     <input type="file" class="form-control" name="file">
                                 </div>
-                                <div class="form-group col-12">
-                                    <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                                    <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-                                </div>
                             </div>
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="button-group">
+                <button type="submit" form="createForm" class="btn btn-info btn-sm">Guardar</button>
+                <button type="reset" form="createForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
             </div>
         </div>
     </div>
