--- a/views/leyes/leyesAttachmentForm.ejs
+++ b/views/leyes/leyesAttachmentForm.ejs
@@ -17,20 +17,20 @@
                             <p>Número: <%= attachLey.number %></p>
                             <p>Año: <%= attachLey.year %></p>
                             <p>Estado: <%= attachLey.status %></p>
-                            <form action="/leyes/attachments/<%= attachLey.id %>" method="POST" enctype="multipart/form-data">
+                            <form id="attachmentForm" action="/leyes/attachments/<%= attachLey.id %>" method="POST" enctype="multipart/form-data">
                                 <div class="row leyes-detail">
                                     <div class="form-group col-12">
                                         <label for="attachment" class="form-label">Adjuntar Anexo</label>
                                         <input type="file" class="form-control" name="attachment">
                                     </div>
-                                    <div class="form-group col-12">
-                                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                                        <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Cancelar</button>
-                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
+                </div>
+                <div class="button-group">
+                    <button type="submit" form="attachmentForm" class="btn btn-info btn-sm">Guardar</button>
+                    <button type="button" form="attachmentForm" class="btn btn-info btn-sm edit-button" onclick="history.back()">Cancelar</button>
                 </div>
             </div>
         </div>        
