--- a/views/leyes/leyesEditForm.ejs
+++ b/views/leyes/leyesEditForm.ejs
@@ -13,7 +13,7 @@
                 <div class="container form-wrapper">
                     <div class="row">
                         <div class="col-12">
-                            <form action="/leyes/edit/<%= editingLey.id %>" method="POST" enctype="multipart/form-data">
+                            <form id="editForm" action="/leyes/edit/<%= editingLey.id %>" method="POST" enctype="multipart/form-data">
                                 <div class="row leyes-detail">
                                     <div class="form-group col-12">
                                         <label for="number" class="form-label">Número:</label>
@@ -65,14 +65,14 @@
                                         <label for="norm" class="form-label">Adjuntar Norma</label>
                                         <input type="file" class="form-control" name="norm" value="<%= editingLey.file %>">
                                     </div>
-                                    <div class="form-group col-12">
-                                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                                        <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Cancelar</button>
-                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>            
+                </div>
+                <div class="button-group">
+                    <button type="submit" form="editForm" class="btn btn-info btn-sm">Guardar</button>
+                    <button type="button" form="editForm" class="btn btn-info btn-sm edit-button" onclick="history.back()">Cancelar</button>
                 </div>
             </div>
         </div>        
