--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -13,7 +13,7 @@
                 <div class="container form-wrapper">
                     <div class="row">
                         <div class="col-12">
-                            <form action="/users/login" method="POST">
+                            <form id="loginForm" action="/users/login" method="POST">
                                 <div class="row leyes-detail">
                                     <div class="form-group col-12">
                                         <label for="email" class="form-label">Email:</label>
@@ -29,17 +29,18 @@
                                             <small class="text-danger"><%= errors.password.msg %></small>
                                         <% } %>
                                     </div>
-                                    <div class="form-group col-12">
-                                        <button type="submit" class="btn btn-info btn-sm">Continuar</button>
-                                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-                                    </div>
-                                    <div class="form-group signup_link">
+                                    <div class="form-group col-12 signup_link">
                                         <span>No posee una cuenta?</span> <a href="/users/register" class="black-link">Crear una cuenta</a>
                                     </div>
                                 </div>
                             </form>
                         </div>
                     </div>
+                </div>
+                <br>
+                <div>
+                    <button type="submit" form="loginForm" class="btn btn-info btn-sm">Continuar</button>
+                    <button type="reset" form="loginForm" class="btn btn-info btn-sm">Limpiar</button>
                 </div>
             </div>
         </div>        
