--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -13,7 +13,7 @@
                 <div class="container form-wrapper">
                     <div class="row">
                         <div class="col-12">
-                            <form action="/users/register" method="POST" enctype="multipart/form-data">
+                            <form id="registerForm" action="/users/register" method="POST" enctype="multipart/form-data">
                                 <div class="row leyes-detail">
                                     <div class="form-group col-12">
                                         <label for="firstName" class="form-label">Nombre:</label>
@@ -65,14 +65,14 @@
                                             <small class="text-danger"><%= errors.avatar.msg %></small>
                                         <% } %> 
                                     </div>
-                                    <div class="form-group col-12">
-                                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
+                </div>
+                <div class="button-group">
+                    <button type="submit" form="registerForm" class="btn btn-info btn-sm">Guardar</button>
+                    <button type="reset" form="registerForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
                 </div>
             </div>
         </div>
