--- a/views/suscriptionForm.ejs
+++ b/views/suscriptionForm.ejs
@@ -7,32 +7,34 @@
         <!-- header -->
         <%- include('partials/headerNavbar') %>
         <!-- /header -->
-        <div class="container form-wrapper wide-form">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="form-title">Suscripciones</h2>
+        <div class="row">
+            <div class="container search-group col-lg-6 col-md-8">
+                <h2 class="tittle-wrapper">Suscripciones</h2>
+                <div class="container form-wrapper">
+                    <div class="row">
+                        <div class="col-12">
+                            <form id="suscriptionForm" action="/api/suscription" method="POST">
+                                <div class="form-group col-12 col-md-6">
+                                    <label for="frequency" class="form-label">Frecuencia:</label>
+                                    <input type="text" id="frequency" name="frequency" class="form-control" value="Mensual" readonly>
+                                </div>
+                                <div class="form-group col-12 col-md-6">
+                                    <label for="transactionAmount" class="form-label">Monto:</label>
+                                    <input type="text" id="transactionAmount" name="transactionAmount" class="form-control" value="$10" readonly>
+                                </div>
+                                <div class="form-group col-12 col-md-6">
+                                    <label for="mercadoEmail" class="form-label">Mail de Mercado Pago:</label>
+                                    <input type="email" id="mercadoEmail" name="mercadoEmail" class="form-control">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12">
-                    <form action="/api/suscription" method="POST">
-                        <div class="form-group col-12 col-md-6">
-                            <label for="frequency" class="form-label">Frecuencia:</label>
-                            <input type="text" id="frequency" name="frequency" class="form-control" value="Mensual" readonly>
-                        </div>
-                        <div class="form-group col-12 col-md-6">
-                            <label for="transactionAmount" class="form-label">Monto:</label>
-                            <input type="text" id="transactionAmount" name="transactionAmount" class="form-control" value="$10" readonly>
-                        </div>
-                        <div class="form-group col-12 col-md-6">
-                            <label for="mercadoEmail" class="form-label">Mail de Mercado Pago:</label>
-                            <input type="email" id="mercadoEmail" name="mercadoEmail" class="form-control">
-                        </div>
-                        <div class="form-group col-12">
-                            <button type="submit" class="btn btn-info btn-sm">Enviar</button>
-                            <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
-                            <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button>
-                            <a class="btn btn-info btn-sm" href="/api/status">Consultar Estado</a>
-                        </div>
-                    </form>
+                <div class="button-group">
+                    <button type="submit" form="suscriptionForm" class="btn btn-info btn-sm">Enviar</button>
+                    <button type="reset" form="suscriptionForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
+                    <button type="button" class="btn btn-info btn-sm edit-button" onclick="history.back()">Volver</button>
+                    <a href="/api/status" class="btn btn-info btn-sm edit-button">Consultar Estado</a>
                 </div>
             </div>
         </div>
