Se agregan funcionalidades para pausar y reactivar suscripciones

--- a/views/suscriptionForm.ejs
+++ b/views/suscriptionForm.ejs
@@ -32,9 +32,10 @@
                 </div>
                 <div class="button-group">
                     <button type="submit" form="suscriptionForm" class="btn btn-info btn-sm">Enviar</button>
-                    <button type="reset" form="suscriptionForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
                     <button type="button" class="btn btn-info btn-sm edit-button" onclick="history.back()">Volver</button>
                     <a href="/api/status" class="btn btn-info btn-sm edit-button">Consultar Estado</a>
+                    <a href="/api/pauseSuscription" class="btn btn-info btn-sm edit-button">Pausar Suscripcion</a>
+                    <a href="/api/reactSuscription" class="btn btn-info btn-sm edit-button">Reactivar Suscripcion</a>
                 </div>
             </div>
         </div>
