--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Evaluar si funciona sino sacar -->
+	<meta name="google-signin-client_id" content="247424807623-m6lssevnm18lhgq33dtee21jrbotucko.apps.googleusercontent.com">
 	<title><%= title %> - Leyes CABA</title>
 	<!-- FontAwesome Stylesheet -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -18,4 +20,6 @@
 	<script src="../../javascripts/scriptCustom.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://sdk.mercadopago.com/js/v2"></script>
+	<!-- Evaluar si funciona sino sacar -->
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
