--- a/views/leyes/leyesEditForm.ejs
+++ b/views/leyes/leyesEditForm.ejs
@@ -54,7 +54,7 @@
                                 <div class="form-group col-12">
                                     <p class="fileLabel">Texto Consolidado:</p>
                                     <div class="file-block">
-                                        <label for="mainFile" class="btn btn-info btn-sm label-btn">Seleccionar Archivo:</label>
+                                        <label for="mainFile" class="btn btn-info btn-sm label-btn edit-button">Seleccionar Archivo:</label>
                                         <input 
                                             type="file" 
                                             class="form-control" 
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="button-group">
-                <button type="submit" form="editForm" class="btn btn-info btn-sm">Guardar</button>
+                <button type="submit" form="editForm" class="btn btn-info btn-sm edit-button">Guardar</button>
                 <button type="button" class="btn btn-info btn-sm edit-button" onclick="history.back()">Volver</button>
             </div>
         </div>
