--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -42,7 +42,7 @@
 						</div>
 					</div>
 					<div class="button-group">
-						<button type="submit" form="searchForm" class="btn btn-info btn-sm">Enviar</button>
+						<button type="submit" form="searchForm" class="btn btn-info btn-sm edit-button">Enviar</button>
 						<button type="reset" form="searchForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
 					</div>
 				</div>
