--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="button-group">
-                <button type="submit" form="createForm" class="btn btn-info btn-sm">Guardar</button>
+                <button type="submit" form="createForm" class="btn btn-info btn-sm edit-button">Guardar</button>
                 <button type="reset" form="createForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
             </div>
         </div>
