--- a/views/leyes/leyesAttachmentForm.ejs
+++ b/views/leyes/leyesAttachmentForm.ejs
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="button-group">
-                    <button type="submit" form="attachmentForm" class="btn btn-info btn-sm">Guardar</button>
+                    <button type="submit" form="attachmentForm" class="btn btn-info btn-sm edit-button">Guardar</button>
                     <button type="button" form="attachmentForm" class="btn btn-info btn-sm edit-button" onclick="history.back()">Cancelar</button>
                 </div>
             </div>
